--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,10 @@ spring:
 
   r2dbc:
     # Conexión a bd Person
-    url: r2dbc:postgresql://ep-morning-cake-a46o3cf8-pooler.us-east-1.aws.neon.tech:5432/neondb?sslmode=require
-    username: neondb_owner
-    password: npg_tGu4yQWLh9jb
+    url: ${R2DBC_URL} # r2dbc:postgresql://ep-morning-cake-a46o3cf8-pooler.us-east-1.aws.neon.tech:5432/neondb?sslmode=require
+    username: ${R2DBC_USERNAME} # neondb_owner
+    password: ${R2DBC_PASSWORD} # npg_tGu4yQWLh9jb
+
     pool:
       max-size: 20
       min-size: 5
